// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/15/2010
	r252 [pakpil]
	* Fixed an issue where the client freeze when use disguise. Bug report 252.

03/14/2010
	r251 [pakpil]
	* Fixed RA_ELECTRICSHOCKET that wasn't draining SP and wasn't traped all in 5x5 area.

	r250 [Jobbie]
	* Update skill cast time of some Rune Knight skills.

	r249 [Jobbie]
	* Corrected some items in item_db2.
	* Added NC_MAINFRAME, NC_SILVERSNIPER, NC_DISJOINT, GN_S_PHARMACY, GN_MIX_COOKING and GN_MAKEBOMB.
	* Fixed some radius effect, cooldown and casttime of Mechanic and Genetic skills.
	* Corrected some requirements when using NC_SILVERSNIPER.
	* Corrected some SC_* in which mado is unequipped it is not ended.
	* Fixed missing auto trigger code of Warg Strike when attacking normal or with Bow.
	* Fixed NC_COLDSLOWER which is having the same status effect.
	* Fixed SC_LEECHESEND. follow up (r246).

	r248 [pakpil]
	* Fixed WL_COMET and AB_ADORAMUS that are not checking for partner correctly and wasn't consuming Blue/Red gemstones while were casted alone.
	* Minor fix in riding where Gryphons and PecoPeco should work the same way.

	r246 [Jobbie]
	* Corrected item id 12383 which is not usable.
	* Corrected Highness Heal healing value formula.
	* Corrected Coloceo Heal which not healing players although it displays the healing value.
	* Adjusted Guillotine Cross poisons behavior to work same in official server.
	

03/13/2010
	r245 [Jobbie]
	* Fixed an issue where Mechanics cannot equip mado when using NPC

03/12/2010
	r244 [pakpil]
	* Minor fix in LG_FORCEOFVANGUARD where should add rage with physical attacks only.

	r243 [pakpil]
	* Added LG_FORCEOFVANGUARD and LG_RAGEBURST skills.
	- Added similar funtions to those used with Monk's spirit spheres to hadle LG_FORCEOFVANGUARD since these skills have same behavior and you can get both at a time.